// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmotionalForecastCard matches snapshot in empty state 1`] = `
<View
  className="px-6 mb-6"
>
  <div
    style={
      {
        "borderColor": "rgba(255,255,255,0.2)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 5,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        {
          "padding": 20,
        }
      }
    >
      <View
        className="items-center py-4"
      >
        <Text
          className="text-white text-lg font-medium text-center leading-relaxed italic opacity-90"
        >
          Your emotional sky is a blank canvas. Tap below to share your current inner weather.
        </Text>
      </View>
    </View>
  </div>
</View>
`;

exports[`EmotionalForecastCard matches snapshot with mood 1`] = `
<View
  className="px-6 mb-6"
>
  <div
    style={
      {
        "borderColor": "rgba(255,255,255,0.2)",
        "borderRadius": 16,
        "borderWidth": 1,
        "elevation": 5,
        "overflow": "hidden",
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        {
          "padding": 20,
        }
      }
    >
      <View
        className="flex-row items-start justify-between mb-4"
      >
        <View
          className="flex-1"
        >
          <Text
            className="text-orange-200 text-xs font-semibold uppercase tracking-wider mb-1"
          >
            Current Mood
          </Text>
          <Text
            className="text-white text-2xl font-bold leading-tight"
          >
            Sunny + Partly
          </Text>
        </View>
        <View
          className="flex-row gap-2"
        />
      </View>
      <View
        className="gap-3"
      >
        <View
          className="flex-row items-center gap-2"
        >
          <Text
            className="text-white text-lg font-medium"
          >
            Intensity: 
            85
            %
          </Text>
        </View>
        <View
          className="h-px w-full bg-white/10"
        />
        <Text
          className="text-white/90 text-base font-medium leading-relaxed italic"
        >
          "
          Feeling great today!
          "
        </Text>
      </View>
    </View>
  </div>
</View>
`;
